bug with hash sanity check
Fixed AreAllEqual returning wrong value

--- a/src/SafeOrbit/SafeOrbit.nuspec
+++ b/src/SafeOrbit/SafeOrbit.nuspec
@@ -37,7 +37,7 @@
       * Fixed optimization problems in SafeStringToStringMarshaler
 
       - Bugs -
-      //Run unit tests for .net core
+      * Fixed sanity check hash size function returning wrong value
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>.net security protect safeorbit hash safestring saferandom safebytes protection injection detection asynchronous encryption</tags>
