--- a/src/SafeOrbit/SafeOrbit.csproj
+++ b/src/SafeOrbit/SafeOrbit.csproj
@@ -4,7 +4,6 @@
     <Description>SafeOrbit is easy-to-use and strong security toolkit for .NET and .NET Core.</Description>
     <Copyright>MIT-licensed</Copyright>
     <AssemblyTitle>SafeOrbit</AssemblyTitle>
-    <VersionPrefix>0.2.2</VersionPrefix>
     <Authors>Erkin Ekici</Authors>
     <TargetFrameworks>netstandard1.6;netstandard2.0;net45;net451;net452;net46;net461;net462;net47;net471;net472;</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -50,6 +49,9 @@
     <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.1" />
     <PackageReference Include="System.Reflection.Metadata" Version="1.6.0" />
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <!-- Serialization -->
+    <PackageReference Include="System.Runtime.Serialization.Primitives " Version="4.3.0" />
+    <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'net451' OR '$(TargetFramework)' == 'net452' OR '$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'net461'  OR '$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net47' OR '$(TargetFramework)' == 'net471' OR '$(TargetFramework)' == 'net472' OR '$(TargetFramework)' == 'net462'">
