--- a/src/SafeOrbit/SafeOrbit.nuspec
+++ b/src/SafeOrbit/SafeOrbit.nuspec
@@ -30,12 +30,13 @@
       * Updated DotNet dependencies to the latest available for different platforms
 
       - Security -
-      * IFastRandom is now seeded with strong random data for most of the usages.
+      * IFastRandom is now seeded with strong random data.
       * Fixed memory leak problem in SafeStringToStringMarshaler.
 
       - Performance -
       * Caching types for reflection. Memory protection works faster.
       * Optimized serialization & encryption with faster async operations
+      * Small optimizations in randoms
 
       - Other -
       * Fixed sanity check hash size function returning wrong value
