--- a/src/SafeOrbit/SafeOrbit.nuspec
+++ b/src/SafeOrbit/SafeOrbit.nuspec
@@ -35,7 +35,9 @@
 
       - Other -
       * Fixed sanity check hash size function returning wrong value.
-      * Thread safe byte manipulations: Problems when managing more than one safebytes/safestring is solved.
+      * Fixed dead lcok in async encryptions algorithms.
+      * Removed unnecessary code from StartEarly
+      * (Not done yet) Thread safe byte manipulations: Problems when managing more than one safebytes/safestring is solved.
 
       - Compatibility -
       * Added support for netstandard2.0, net462, net47, net471, net472
