--- a/src/SafeOrbit/SafeOrbit.nuspec
+++ b/src/SafeOrbit/SafeOrbit.nuspec
@@ -26,24 +26,25 @@
     </description>
     <releaseNotes>
       - Security -
-      * IFastRandom is now seeded with strong random data.
-      * Fixed memory leak problem in SafeStringToStringMarshaler.
+        * IFastRandom is now seeded with strong random data.
+        * Fixed memory leak problem in SafeStringToStringMarshaler.
 
       - Performance -
-      * Optimized serialization and encryption with faster async operations.
-      * Small optimizations in random generators.
-      * More parallel implementation: Many sync methods are replaced with async variants.
-        * TODO => ISafeByteCollection (go all async)
+        * Optimized serialization and encryption with async operations.
+        * Small optimizations in random generators.
+        * Slightly safe string equality check with plain strings.
+        * More parallel implementation: Many sync methods are replaced with async variants.
+          * TODO => ISafeByteCollection (go all async)
 
       - Other -
-      * Fixed sanity check hash size function returning wrong value.
-      * Fixed dead lock in async encryption algorithms.
-      * Removed unnecessary code from StartEarly
-      * (Not done yet) Thread safe byte manipulations: Problems when managing more than one safebytes/safestring is solved.
+        * Fixed sanity check hash size function returning wrong value.
+        * Fixed dead lock in async encryption algorithms.
+        * Removed unnecessary code from StartEarly
+        * (Not done yet) Thread safe byte manipulations: Problems when managing more than one safebytes/safestring is solved.
 
       - Compatibility -
-      * Added support for netstandard2.0, net462, net47, net471, net472
-      * Updated framework dependencies to the latest available for different platforms
+        * Added support for netstandard2.0, net462, net47, net471, net472
+        * Updated framework dependencies to the latest available for different platforms
     </releaseNotes>
     <copyright>Copyright 2016 - 2019</copyright>
     <tags>.net security protect safeorbit hash safestring saferandom safebytes protection injection detection asynchronous encryption</tags>
