--- a/src/SafeOrbit/SafeOrbit.csproj
+++ b/src/SafeOrbit/SafeOrbit.csproj
@@ -1,20 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>SafeOrbit is easy-to-use and strong security toolkit for .NET and .NET Core.</Description>
-    <Copyright>MIT-licensed</Copyright>
-    <AssemblyTitle>SafeOrbit</AssemblyTitle>
-    <Version>0.3.0</Version>
-    <Authors>undergroundwires</Authors>
-    <TargetFrameworks>netstandard1.6;netstandard2.0;net45;net451;net452;net46;net461;net462;net47;net471;net472;</TargetFrameworks>
+    <AssemblyName>SafeOrbit</AssemblyName>    <TargetFrameworks>netstandard1.6;netstandard2.0;net45;net451;net452;net46;net461;net462;net47;net471;net472;</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AssemblyName>SafeOrbit</AssemblyName>
-    <PackageId>SafeOrbit</PackageId>
-    <PackageIconUrl>https://raw.githubusercontent.com/undergroundwires/SafeOrbit/master/docs/img/logo/logo_60x60.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/undergroundwires/SafeOrbit</PackageProjectUrl>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/undergroundwires/SafeOrbit</RepositoryUrl>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
@@ -60,6 +49,11 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\LICENSE" Link="LICENSE" Pack="true" PackagePath="" />
+    <Content Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
+
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' OR  '$(TargetFramework)' == 'netstandard1.6.1'">
     <DefineConstants>$(DefineConstants);NETCORE</DefineConstants>
   </PropertyGroup>
@@ -79,10 +73,57 @@
     <AssemblyOriginatorKeyFile>../../docs/signature_keys/private/SafeOrbit-key.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
+    <DelaySign>false</DelaySign>
+
+
+    <!-- ////////////////////////// NUGET BEGIN ////////////////////////// -->
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <PackageOutputPath>../../dist/</PackageOutputPath>
+    <PackageId>SafeOrbit</PackageId>
+    <Version>0.3.0</Version>
+    <Authors>undergroundwires</Authors>
+    <Title>SafeOrbit is easy-to-use and strong security toolkit for .NET</Title>
+    <Description>
+      SafeOrbit is easy-to-use and strong security toolkit for .NET and .NET Core.
+
+      While SafeOrbit's primarily focus is strong memory protection, SafeOrbit can protect any data in the memory for you: you have SafeBytes to protect binaries, SafeString to protect texts and even more to protect your application against injections. It also provides a bunch of tools to implement strong and high performance cryptographically secure algorithms for encryption, hashing and random.
+
+      Source code : https://github.com/undergroundwires/safeOrbit
+      Wiki : https://github.com/undergroundwires/safeOrbit/wiki
+
+      Supported platforms:
+      - .NET Framework 4.5+
+      - .NET Standard 1.6+, 2.0+
+    </Description>
+    <Copyright>Copyright 2016 - 2019</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReleaseNotes>
+      - Security -
+      * IFastRandom is now seeded with strong random data.
+      * Fixed memory leak problem in SafeStringToStringMarshaler.
+      * Protection against timing attacks in SafeByte/SafeString comparisions.
+
+      - Performance -
+      * Optimized serialization and encryption with async operations.
+      * Small optimizations in random generators.
+      * Slightly safe string equality check with plain strings.
+      * More parallel implementation in inner classes.
+
+      - Other -
+      * Fixed sanity check hash size function returning wrong value.
+      * Removed unnecessary code from StartEarly.
+      * More small optimizations &amp; fixes
+
+      - Compatibility -
+      * Added support for netstandard2.0, net462, net47, net471, net472
+      * Updated framework dependencies to the latest available for different platforms
+    </PackageReleaseNotes>
+    <PackageTags>.net security protect safeorbit hash safestring saferandom safebytes protection injection detection asynchronous encryption</PackageTags>
+    <PackageIconUrl>https://raw.githubusercontent.com/undergroundwires/SafeOrbit/master/docs/img/logo/logo_60x60.png</PackageIconUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/undergroundwires/SafeOrbit</RepositoryUrl>
+    <!-- /////////////////////////// NUGET END /////////////////////////// -->
+    
   </PropertyGroup>
-
-  <Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
-    <Exec Command="makeNuget.cmd $(Configuration) Release &quot;../../dist/packages/&quot;" />
-  </Target>
-
 </Project>
